# SDD

./: CHANGELOG.md  CHANGELOG_en.md  CHANGELOG_ja.md  CONTRIBUTING.md  CONTRIBUTING_en.md  CONTRIBUTING_ja.md  README.md  README_en.md  README_ja.md  SECURITY.md  SECURITY_en.md  SECURITY_ja.md
docs/: README.md  (+2 more)
spec-ai-writer/: .env.example  QUICKSTART.md  README.md  pyproject.toml
spec-ai-writer/config/: llm_settings_store.py  settings.py
spec-ai-writer/config/prompts/: phase_01_prompts.py  phase_02_prompts.py  phase_03_prompts.py  phase_04_prompts.py  phase_05_prompts.py  phase_06_prompts.py  phase_07_prompts.py
spec-ai-writer/data/1c3a28f6/: interview.json  project.json
spec-ai-writer/data/21a0f70c/: interview.json  project.json
spec-ai-writer/data/33781af9/: interview.json  project.json
spec-ai-writer/data/46ee17db/: interview.json  project.json
spec-ai-writer/data/50b2207e/: interview.json  project.json
spec-ai-writer/data/55bd5fa7/: interview.json  project.json
spec-ai-writer/data/89f429fd/: interview.json  project.json
spec-ai-writer/data/9d39ef7c/: interview.json  project.json
spec-ai-writer/data/f7b82a14/: interview.json  project.json
spec-ai-writer/docs/: 02-planning-requirement.md  20260215modify-planning.md  20260222-03-bug-fix-planning.md  20260322fix-planning.md  BEDROCK_SETUP.md  CONSTITUTION.md  LLM_SETUP.md  MODIFICATION_PLAN.md  QUICKSTART.md  SPEC.md
spec-ai-writer/docs/plans/: 20260104renaming-plan.md  (+5 more)
spec-ai-writer/frontend/: .env.example  package-lock.json  package.json
spec-ai-writer/spec_ai_writer/: cli.py
spec-ai-writer/templates/: 02-planning-requirement.md.jinja2  03-design-planning.md.jinja2  07-migration-operation.md.jinja2
spec-ai-writer/tests/: conftest.py
(+123 files in other folders)
