[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spec-ai-writer"
version = "1.0.4"
description = "Specification Driven Development Interview & Generation System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SDD Project", email = "sdd@example.com"}
]
keywords = ["sdd", "specification", "interview", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "boto3>=1.34.0",
    "click>=8.1.0",
    "questionary>=2.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "GitPython>=3.1.41",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=26.3.1",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
spec = "spec_ai_writer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["spec_ai_writer", "config"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
